docs/book/samples/ch02/shadow_check.out
error[name]: `tau` is already a declaration; rename the binding
  --> shadow_check.kso:2:3
   2 |   tau = 5
         ^
